[workspace]
members = [ 
    "icentral-visit-markers", 
    "icentral-3p", 
    "icentral-workspace-map", 
    "icentral-timing-update", 
    "icentral-timer", 
    "icentral-test-update", 
    "icentral-test-speedup", 
    "icentral-test-qube", 
    "icentral-test-largest-bcc-speedup", 
    "icentral-test-insertion", 
    "icentral-test-incremental-qube", 
    "icentral-test-incremental-brandes", 
    "icentral-test-fuad", 
    "icentral-test-fast-brandes", 
    "icentral-test-brandes", 
    "icentral-test-basic-icentral", 
    "icentral-subgraph", 
    "icentral-subgraph-map", 
    "icentral-stats", 
    "icentral-sigmas", 
    "icentral-scratch", 
    "icentral-scores", 
    "icentral-rbfs", 
    "icentral-qube", 
    "icentral-predecessor-map", 
    "icentral-path-counts", 
    "icentral-partial-bbfs", 
    "icentral-parents-map", 
    "icentral-parallel-brandes", 
    "icentral-pair-dependencies", 
    "icentral-nodeid", 
    "icentral-node-stack", 
    "icentral-node-queue", 
    "icentral-neighbors", 
    "icentral-naive", 
    "icentral-mucid", 
    "icentral-mucid-map", 
    "icentral-muc-speedup-stats", 
    "icentral-muc", 
    "icentral-mock", 
    "icentral-mindexed-map", 
    "icentral-match", 
    "icentral-largest-bcc", 
    "icentral-label-map", 
    "icentral-json", 
    "icentral-speedup-calculation", 
    "icentral-workspace", 
    "icentral-alg", 
    "icentral-graph-hash", 
    "icentral-graph", 
    "icentral-gen-rand-edges", 
    "icentral-fast-brandes", 
    "icentral-edges", 
    "icentral-edge", 
    "icentral-distances", 
    "icentral-deltas", 
    "icentral-delta", 
    "icentral-cycle", 
    "icentral-count-bcc", 
    "icentral-conn-vertex-map", 
    "icentral-component", 
    "icentral-compare-runtime", 
    "icentral-color-map", 
    "icentral-calculate-bc-mem", 
    "icentral-bridge-edges", 
    "icentral-brandes", 
    "icentral-bcc", 
    "icentral-errors", 
    "icentral-bbfs", 
    "icentral-articulation-point-map", 
    "icentral-articulation-point", 
    "icentral-all-pairs-distance", 
    "icentral-all-pairs-shortest-path-counts", 
    "icentral-test-rustworkx", 
    "icentral-operation", 
    "icentral-operation-update", 
    "icentral-graph-interface", 
    "icentral-bc-mem", 
    "icentral" 
]
resolver = "2"
