[package]
name = "icentral-alg"
version = "0.1.0"
authors = ["klebs tpk3.mx@gmail.com"]
edition = "2021"
description = "A Rust crate for incremental and parallel betweenness centrality algorithms."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/icentral-alg"
keywords = ["betweenness-centrality", "graph-algorithms", "parallel", "incremental"]
categories = ["algorithms", "graph", "parallel"]

[dependencies]
disable_macro = "0.3.6"
libc = "0.2"
mpi = "0.8.0"
renew-traits = "0.1.0"
[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-bbfs]
path = "../icentral-bbfs"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-component]
path = "../icentral-component"
[dependencies.icentral-distances]
path = "../icentral-distances"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-gen-rand-edges]
path = "../icentral-gen-rand-edges"
[dependencies.icentral-graph]
path = "../icentral-graph"
[dependencies.icentral-graph-hash]
path = "../icentral-graph-hash"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-muc]
path = "../icentral-muc"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.icentral-operation]
path = "../icentral-operation"
[dependencies.icentral-pair-dependencies]
path = "../icentral-pair-dependencies"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
[dependencies.icentral-partial-bbfs]
path = "../icentral-partial-bbfs"
[dependencies.icentral-path-counts]
path = "../icentral-path-counts"
[dependencies.icentral-rbfs]
path = "../icentral-rbfs"
[dependencies.icentral-scores]
path = "../icentral-scores"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
[dependencies.icentral-test-brandes]
path = "../icentral-test-brandes"
[dependencies.icentral-test-fuad]
path = "../icentral-test-fuad"
[dependencies.icentral-test-incremental-brandes]
path = "../icentral-test-incremental-brandes"
[dependencies.icentral-test-incremental-qube]
path = "../icentral-test-incremental-qube"
[dependencies.icentral-test-qube]
path = "../icentral-test-qube"
[dependencies.icentral-timer]
path = "../icentral-timer"
[dependencies.icentral-timing-update]
path = "../icentral-timing-update"
[dependencies.icentral-workspace]
path = "../icentral-workspace"

[[bin]]
name = "icentral"
path = "src/main.rs"
