[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-articulation-point-map"
version = "0.1.0"
description = "Efficient management and analysis of articulation points in graph data structures, aiding graph connectivity analysis."
keywords = ["graph", "articulationpoints", "connectivity", "algorithms", "datastructures"]
categories = ["data-structures", "algorithms", "network-programming", "science"]
