[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-color-map]
path = "../icentral-color-map"
version = "0.1.0"
[dependencies.icentral-distances]
path = "../icentral-distances"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-predecessor-map]
path = "../icentral-predecessor-map"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-articulation-point"
version = "0.1.0"
description = "A Rust library providing efficient computation of articulation points in graphs, indispensable for network vulnerability analysis and related applications."
keywords = ["articulationpoint", "graphalgorithms", "networkanalysis", "cutvertices", "dfs"]
categories = ["algorithms", "data-structures", "science", "mathematics", "development-tools"]
