[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
version = "0.1.0"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-bc-mem"
version = "0.1.0"
description = "icentral-bc-mem facilitates the creation and management of hierarchical memory workspaces using node-centric structures and map-based memory organization."
keywords = ["memory", "hierarchical", "workspace", "node", "map"]
categories = ["data-structures", "memory-management", "simulation"]
