[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-color-map]
path = "../icentral-color-map"
version = "0.1.0"
[dependencies.icentral-distances]
path = "../icentral-distances"
version = "0.1.0"
[dependencies.icentral-edge]
path = "../icentral-edge"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-predecessor-map]
path = "../icentral-predecessor-map"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-bcc"
version = "0.1.0"
description = "A Rust crate for efficiently finding biconnected components and subgraphs in graphs, aiding in network analysis and structural graph evaluations."
keywords = ["biconnected", "graph", "component", "algorithm", "network"]
categories = ["algorithms", "data-structures", "network-programming", "science"]
license     = "MIT OR Apache-2.0"
