[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-bc-mem]
path = "../icentral-bc-mem"
version = "0.1.0"
[dependencies.icentral-component]
path = "../icentral-component"
version = "0.1.0"
[dependencies.icentral-edge]
path = "../icentral-edge"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph]
path = "../icentral-graph"
version = "0.1.0"
[dependencies.icentral-node-queue]
path = "../icentral-node-queue"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
version = "0.1.0"
[dependencies.icentral-scores]
path = "../icentral-scores"
version = "0.1.0"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
version = "0.1.0"
[dependencies.icentral-workspace]
path = "../icentral-workspace"
version = "0.1.0"
[dependencies.icentral-workspace-map]
path = "../icentral-workspace-map"
version = "0.1.0"
[dependencies]
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-calculate-bc-mem"
version = "0.1.0"
description = "An efficient Rust crate for incremental betweenness centrality calculations in dynamic graph structures."
keywords = ["betweenness", "centrality", "graph", "incremental", "algorithm"]
categories = ["algorithms", "data-structures", "mathematics", "network-programming"]
license     = "MIT OR Apache-2.0"
