[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-color-map"
version = "0.1.0"
description = "A robust Rust crate for managing color maps associated with nodes in graphs or similar data structures, supporting dynamic manipulation and query of node color state."
keywords = ["color", "map", "nodes", "graphs", "attributes"]
categories = ["algorithms", "data-structures", "development-tools"]
