[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-count-bcc"
version = "0.1.0"
