[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-count-bcc"
version = "0.1.0"
description = "A Rust crate for counting biconnected components in graphs with a specified minimum number of edges, useful for network analysis and graph algorithms."
keywords = ["biconnectedcomponent", "graphs", "networkanalysis", "edgecounting", "graphalgorithms"]
categories = ["algorithms", "data-structures", "science", "simulation", "mathematics"]
