[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-articulation-point-map]
path = "../icentral-articulation-point-map"
version = "0.1.0"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
version = "0.1.0"
[dependencies.icentral-brandes]
path = "../icentral-brandes"
version = "0.1.0"
[dependencies.icentral-distances]
path = "../icentral-distances"
version = "0.1.0"
[dependencies.icentral-edge]
path = "../icentral-edge"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-pair-dependencies]
path = "../icentral-pair-dependencies"
version = "0.1.0"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
version = "0.1.0"
[dependencies.icentral-path-counts]
path = "../icentral-path-counts"
version = "0.1.0"
[dependencies.icentral-scores]
path = "../icentral-scores"
version = "0.1.0"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
version = "0.1.0"
[dependencies.icentral-subgraph]
path = "../icentral-subgraph"
version = "0.1.0"
[dependencies.icentral-timer]
path = "../icentral-timer"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-delta"
version = "0.1.0"
