[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies]
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-distances"
version = "0.1.0"
description = "Manage and manipulate distances within a graph or network context. Includes efficient distance storage and operations for pathfinding and graph traversal algorithms."
keywords = ["distance", "graph", "network", "algorithm", "pathfinding"]
categories = ["algorithms", "data-structures", "network-programming", "science", "simulation"]
