[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-color-map]
path = "../icentral-color-map"
version = "0.1.0"
[dependencies.icentral-distances]
path = "../icentral-distances"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-predecessor-map]
path = "../icentral-predecessor-map"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-edge"
version = "0.1.0"
description = "Icetral-edge provides a utility for managing graph edges, enabling node connectivity and manipulation. This crate is exemplary for implementing robust graph data structures."
keywords = ["graph", "edge", "connectivity", "nodes", "bidirectional"]
categories = ["algorithms", "data-structures", "science", "mathematics", "api-bindings"]
