[dependencies.icentral-3p]
path = "../icentral-3p"
version = "0.1.0"
[dependencies.icentral-edge]
path = "../icentral-edge"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-label-map]
path = "../icentral-label-map"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-edges"
version = "0.1.0"
description = "A Rust crate offering comprehensive edge-centric interfaces and operations for graph data structures. Features efficient edge insertion, removal, and querying with customization support."
keywords = ["graph", "edges", "datastructures", "algorithms", "rust"]
categories = ["data-structures", "algorithms", "development-tools", "network-programming"]
