[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-brandes]
path = "../icentral-brandes"
version = "0.1.0"
[dependencies.icentral-component]
path = "../icentral-component"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[dependencies.icentral-scores]
path = "../icentral-scores"
version = "0.1.0"
[dependencies.icentral-workspace]
path = "../icentral-workspace"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-fast-brandes"
version = "0.1.0"
description = "Efficient Rust implementation of Brandes algorithm for computing betweenness centrality on graphs with support for complex structures."
keywords = ["centrality", "brandes", "graph", "betweenness", "algorithm"]
categories = ["algorithms", "data-structures", "science", "mathematics"]
