[dependencies.icentral-deps]
path = "../icentral-deps"
version = "0.1.0"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
version = "0.1.0"
[dependencies.icentral-bridge-edges]
path = "../icentral-bridge-edges"
version = "0.1.0"
[dependencies.icentral-edge]
path = "../icentral-edge"
version = "0.1.0"
[dependencies.icentral-edges]
path = "../icentral-edges"
version = "0.1.0"
[dependencies.icentral-errors]
path = "../icentral-errors"
version = "0.1.0"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
version = "0.1.0"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
version = "0.1.0"
[package]
edition = "2021"
name = "icentral-gen-rand-edges"
version = "0.1.0"
description = "A Rust crate for generating random edges within graphs, catering to simulation and network analysis by allowing edge creation that avoids existing connections and bridge edges. Compatible with Rust 2021 edition."
keywords = ["graph", "random", "edges", "simulation", "network"]
categories = ["algorithms", "science", "network-programming", "mathematics", "simulation"]
